--- a/package.json
+++ b/package.json
@@ -53,11 +53,12 @@
         "lodash-es": "~4.17.21",
         "password-validator": "~5.3.0",
         "rxjs": "~7.8.1",
+        "search-insights": "~2.17.2",
         "zone.js": "~0.14.4"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "~17.3.2",
         "@angular-builders/custom-webpack": "~17.0.1",
+        "@angular-devkit/build-angular": "~17.3.2",
         "@angular-eslint/eslint-plugin": "~17.3.0",
         "@angular-eslint/eslint-plugin-template": "~17.3.0",
         "@angular-eslint/template-parser": "17.3.0",
