--- a/deploy.valerii-prod.yml
+++ b/deploy.valerii-prod.yml
@@ -39,21 +39,21 @@ tag: '1.0'
 
 environment: docker.dev
 image:
-    tag: spryker/php:latest
+    tag: spryker/php:8.3
     environment:
-        SPRYKER_DEFAULT_STORE: "DE"
-        SPRYKER_ACTIVE_STORES: "DE,AT"
-        SPRYKER_HOOK_BEFORE_DEPLOY: "vendor/bin/install -r pre-deploy.dynamic-store-off -vvv"
-        SPRYKER_HOOK_AFTER_DEPLOY: "true"
-        SPRYKER_HOOK_INSTALL: "vendor/bin/install -r production.dynamic-store-off --no-ansi -vvv"
-        SPRYKER_HOOK_DESTRUCTIVE_INSTALL: "vendor/bin/install -r destructive.dynamic-store-off --no-ansi -vvv"
-        AWS_REGION: 'eu-central-1'
+        SPRYKER_PRODUCT_CONFIGURATOR_HOST: date-time-configurator-example.spryker.local
+        SPRYKER_PRODUCT_CONFIGURATOR_PORT: 80
+        SPRYKER_PRODUCT_CONFIGURATOR_ENCRYPTION_KEY: 'change123'
+        SPRYKER_PRODUCT_CONFIGURATOR_HEX_INITIALIZATION_VECTOR: '0c1ffefeebdab4a3d839d0e52590c9a2'
+        SPRYKER_PUSH_NOTIFICATION_WEB_PUSH_PHP_VAPID_PUBLIC_KEY: 'BGqNWbv0hWM5CQ1-KwAfSQBMC6TMVFyrnh3vQp37oGCNvQ6eG_HyMjxBFJRWeCPTbzDoxcjhxLJS8Ck8r1G2oFw'
+        SPRYKER_PUSH_NOTIFICATION_WEB_PUSH_PHP_VAPID_PRIVATE_KEY: 'UK6DywwjKITPpRHBSY9TLPIXm6BPrHX40sseIoXT9c8'
+        SPRYKER_PUSH_NOTIFICATION_WEB_PUSH_PHP_VAPID_SUBJECT: 'https://spryker.com'
+        SPRYKER_DYNAMIC_STORE_MODE: true
+        SPRYKER_YVES_HOST_EU: yves.eu.spryker.local
+        SPRYKER_YVES_HOST_US: yves.us.spryker.local
     node:
         version: 18
         npm: 9
-    php:
-        enabled-extensions:
-            - newrelic
 composer:
     mode: --no-dev
     autoload: --classmap-authoritative
@@ -62,85 +62,68 @@ assets:
     mode: production
     compression:
         brotli:
-            static: only
-        gzip:
-            static: true
+            static: on
             level: 5
 regions:
     EU:
         services:
             mail:
                 sender:
-                    name: Spryker No-Reply
+                    name: Valerii No-Reply
                     email: no-reply@valerii-prod.cloud.spryker.toys
             database:
                 database: valerii_prod
                 username: spryker
                 password: secret
+            broker:
+                namespace: valerii-prod
+            key_value_store:
+                namespace: 1
+            search:
+                namespace: valerii_prod
 
-        stores:
-            DE:
-                services:
-                    broker:
-                        namespace: de_queue
-                    key_value_store:
-                        namespace: 1
-                    search:
-                        namespace: de_search
-                    session:
-                        namespace: 2
-            AT:
-                services:
-                    broker:
-                        namespace: at_queue
-                    key_value_store:
-                        namespace: 1
-                    search:
-                        namespace: at_search
-                    session:
-                        namespace: 2
 groups:
     EU:
         region: EU
         applications:
-            Yves:
+            yves:
                 application: yves
                 endpoints:
-                    www.de.valerii-prod.cloud.spryker.toys:
-                        store: DE
-                        <<: *frontend-auth
-                    www.at.valerii-prod.cloud.spryker.toys:
-                        store: AT
-                        <<: *frontend-auth
+                    date-time-configurator-example.valerii-prod.cloud.spryker.toys:
+                        entry-point: Configurator
+                    yves.eu.valerii-prod.cloud.spryker.toys:
+                        region: EU
+                        services:
+                            session:
+                                namespace: 2
+            glue:
+                application: glue
+                endpoints:
+                    glue.eu.valerii-prod.cloud.spryker.toys:
+                        region: EU
             boffice:
                 application: backoffice
                 endpoints:
-                    backoffice.de.valerii-prod.cloud.spryker.toys:
-                        store: DE
-                        primal: true
-                    backoffice.at.valerii-prod.cloud.spryker.toys:
-                        store: AT
+                    backoffice.eu.valerii-prod.cloud.spryker.toys:
+                        region: EU
+                        services:
+                            session:
+                                namespace: 3
             backgw:
                 application: backend-gateway
                 endpoints:
-                    backend-gateway.de.valerii-prod.cloud.spryker.toys:
-                        store: DE
-                    backend-gateway.at.valerii-prod.cloud.spryker.toys:
-                        store: AT
-            Glue:
-                application: glue
-                endpoints:
-                    glue.de.valerii-prod.cloud.spryker.toys:
-                        store: DE
-                    glue.at.valerii-prod.cloud.spryker.toys:
-                        store: AT
+                    backend-gateway.eu.valerii-prod.cloud.spryker.toys:
+                        region: EU
+                        primal: true
+
+
 services:
     database:
         engine: mysql
         version: mariadb-10.11
         root:
-            username: "root"
-            password: "secret"
+            username: 'root'
+            password: 'secret'
         endpoints:
             localhost:3306:
                 protocol: tcp
@@ -148,8 +131,8 @@ services:
         engine: rabbitmq
         version: '3.9'
         api:
-            username: "spryker"
-            password: "secret"
+            username: 'spryker'
+            password: 'secret'
         endpoints:
             queue.valerii-prod.cloud.spryker.toys:
             localhost:5672:
@@ -162,20 +145,17 @@ services:
             localhost:16379:
                 protocol: tcp
     search:
-        engine: elastic
-        version: '7.10'
+        engine: opensearch
+        version: '1.3'
         endpoints:
             localhost:9200:
                 protocol: tcp
     scheduler:
         engine: jenkins
-        version: '2.324'
+        version: '2.442'
+        csrf-protection-enabled: true
         endpoints:
-            jenkins2.valerii-prod.cloud.spryker.toys:
-    mail_catcher:
-        engine: mailhog
-        endpoints:
-            mail.valerii-prod.cloud.spryker.toys:
+            scheduler.valerii-prod.cloud.spryker.toys:
 docker:
     ssl:
         enabled: true
@@ -185,6 +165,6 @@ docker:
         xdebug:
             enabled: false
     testing:
-        store: DE
+        store: EU
     mount:
         baked:
