--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "@angular/platform-browser-dynamic": "~17.3.0",
         "@angular/router": "~17.3.0",
         "autonumeric": "~4.6.3",
+        "cypress": "^13.16.0",
         "lodash-es": "~4.17.21",
         "password-validator": "~5.3.0",
         "rxjs": "~7.8.1",
