FRW-9013 Fixed breaking changes. (#9223)
FRW-9013 Fixed breaking changes.

--- a/deploy.ci.acceptance.mariadb.dynamic-store-off.cypress.yml
+++ b/deploy.ci.acceptance.mariadb.dynamic-store-off.cypress.yml
@@ -176,7 +176,7 @@ docker:
         enabled: false
 
     debug:
-        enabled: false
+        enabled: true
         xdebug:
             enabled: false
 
