--- a/buddy.yml
+++ b/buddy.yml
@@ -1891,7 +1891,8 @@
             - 'export AWS_SECRET_ACCESS_KEY=$AWS_S3_SECRET_ACCESS_KEY'
             - 'export AWS_ACCESS_KEY_ID=$ROBOT_TESTS_ARTIFACTS_KEY'
             - 'export AWS_SECRET_ACCESS_KEY=$ROBOT_TESTS_ARTIFACTS_SECRET'
-            - '.ci/snippet/REQUIRE script -q -e -c "docker/sdk exec -i robot-framework rebot -d results --merge results/output.xml results/rerun/rerun.xml -log results/log.html && aws s3 cp ./.robot/results/log.html s3://$ROBOT_TESTS_ARTIFACTS_BUCKET/suite-nonsplit/dms-on/robot-api/$BUDDY_EXECUTION_HASH/PHP8.3MariaDB/group1/log.html"'
+            - '.ci/snippet/REQUIRE script -q -e -c "docker/sdk exec robot-framework rebot -d results --merge results/output.xml results/rerun/rerun.xml -log results/log.html"'
+            - '.ci/snippet/REQUIRE script -q -e -c "aws s3 cp ./.robot/results/log.html s3://$ROBOT_TESTS_ARTIFACTS_BUCKET/suite-nonsplit/dms-on/robot-api/$BUDDY_EXECUTION_HASH/PHP8.3MariaDB/group1/log.html"'
             - 'echo "Check the logs - https://s3.console.aws.amazon.com/s3/object/${ROBOT_TESTS_ARTIFACTS_BUCKET}?region=eu-west-1&prefix=suite-nonsplit-robot-ui-ci/dms-on/PHP8.3MariaDBRobot/${BUDDY_EXECUTION_HASH}/log.html"'
             - 'echo "You must have VPN access to AWS (Spryker-Internal account)"'
             - '.ci/snippet/FINISH'
