Updated cross-spawn dependency.

--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
         "@angular-devkit/build-angular": {
             "http-proxy-middleware": "^3.0.1"
         },
-        "rollup": "^4.22.4"
+        "rollup": "^4.22.4",
+        "cross-spawn": "^7.0.5"
     }
 }
