FRW-9206: tests artefacts saving

--- a/buddy.yml
+++ b/buddy.yml
@@ -1603,7 +1603,7 @@
             - '.ci/snippet/RUN docker/sdk cli composer dump-autoload -o -a --apcu'
             - '.ci/snippet/RUN docker/sdk cli console queue:worker:start --stop-when-empty'
             - '.ci/snippet/RUN script -q -e -c "docker/sdk exec cypress-tests cp .env.example .env"'
-            - '.ci/snippet/RUN script -q -e -c "docker/sdk exec cypress-tests npm run cy:ci"'
+            - '.ci/snippet/RUN script -q -e -c "docker/sdk exec -env "ENV_REPOSITORY_ID=b2ceur" cypress-tests npm run cy:ci"'
             - '.ci/snippet/REQUIRE aws configure set default.s3.max_concurrent_requests 80'
             - '.ci/snippet/REQUIRE aws configure set default.s3.max_queue_size 6000'
             - '.ci/snippet/REQUIRE aws configure set default.s3.multipart_threshold 36MB'
@@ -1667,7 +1667,7 @@
             - '.ci/snippet/RUN docker/sdk cli composer dump-autoload -o -a --apcu'
             - '.ci/snippet/RUN docker/sdk cli console queue:worker:start --stop-when-empty'
             - '.ci/snippet/RUN script -q -e -c "docker/sdk exec cypress-tests cp .env.dynamic-store.example .env"'
-            - '.ci/snippet/RUN script -q -e -c "docker/sdk exec cypress-tests npm run cy:ci"'
+            - '.ci/snippet/RUN script -q -e -c "docker/sdk exec -env "ENV_REPOSITORY_ID=b2ceur" cypress-tests npm run cy:ci"'
             - ' .ci/snippet/REQUIRE aws configure set default.s3.max_concurrent_requests 80'
             - '.ci/snippet/REQUIRE aws configure set default.s3.max_queue_size 6000'
             - '.ci/snippet/REQUIRE aws configure set default.s3.multipart_threshold 36MB'
