FRW-9464 Disabled debug mode

--- a/deploy.ci.acceptance.mariadb.dynamic-store-off.robot.yml
+++ b/deploy.ci.acceptance.mariadb.dynamic-store-off.robot.yml
@@ -177,7 +177,7 @@ docker:
         enabled: false
 
     debug:
-        enabled: true
+        enabled: false
         xdebug:
             enabled: false
 
